i18n/versioned_docs/ja-jp/docusaurus-plugin-content-docs/version-3.18/scalardb-sql/scalardb-sql-status-codes.mdx
---
tags:
  - Enterprise Premium
displayed_sidebar: docsJapanese
---

# ScalarDB SQL エラーコード

import TranslationBanner from '/src/components/_translation-ja-jp.mdx';

<TranslationBanner />

このページでは、ScalarDB SQL のエラーコードの一覧を示します。

## エラーコードのクラスと説明

| クラス          | 説明                       |
|:---------------|:--------------------------|
| `DB-SQL-1xxxx` | ユーザーエラーカテゴリのエラー |

## `DB-SQL-1xxxx` ステータスコード

以下は、ユーザーエラーカテゴリのステータスコードとメッセージです。

### `DB-SQL-10000`

**メッセージ**

```markdown
The namespace does not exist. Namespace: %s
```

### `DB-SQL-10001`

**メッセージ**

```markdown
The table does not exist. Table: %s
```

### `DB-SQL-10002`

**メッセージ**

```markdown
The column %s does not exist
```

### `DB-SQL-10003`

**メッセージ**

```markdown
The column does not exist. Table: %s; Column: %s
```

### `DB-SQL-10004`

**メッセージ**

```markdown
The column index is out of bounds. Index: %d; Size: %d
```

### `DB-SQL-10005`

**メッセージ**

```markdown
A positional bind marker is not allowed when binding named values
```

### `DB-SQL-10006`

**メッセージ**

```markdown
A named bind marker is not allowed when binding positional values
```

### `DB-SQL-10008`

**メッセージ**

```markdown
No namespace name has been specified. Set a default namespace name, or explicitly specify a namespace name
```

### `DB-SQL-10009`

**メッセージ**

```markdown
Zero bytes may not occur in string parameters
```

### `DB-SQL-10010`

**メッセージ**

```markdown
Mixing positional values and named values is not allowed
```

### `DB-SQL-10011`

**メッセージ**

```markdown
Preparing a transaction is supported only in two-phase commit transaction mode
```

### `DB-SQL-10012`

**メッセージ**

```markdown
Validating a transaction is supported only in two-phase commit transaction mode
```

### `DB-SQL-10013`

**メッセージ**

```markdown
The previous transaction is still in progress. Commit, roll back, or suspend the previous transaction first
```

### `DB-SQL-10014`

**メッセージ**

```markdown
This SQL session has already been closed
```

### `DB-SQL-10015`

**メッセージ**

```markdown
A transaction has not begun
```

### `DB-SQL-10016`

**メッセージ**

```markdown
The type %s is not supported
```

### `DB-SQL-10017`

**メッセージ**

```markdown
No connection mode implementations are found. Please add a connection mode implementation to the classpath
```

### `DB-SQL-10018`

**メッセージ**

```markdown
The connection mode is not specified, but multiple connection mode implementations are found. Specify one of the following connection modes: %s
```

### `DB-SQL-10019`

**メッセージ**

```markdown
The connection mode '%s' is not found. Specify one of the following connection modes: %s
```

### `DB-SQL-10020`

**メッセージ**

```markdown
Access denied: You need the %s privilege on the namespace %s to execute this operation
```

### `DB-SQL-10021`

**メッセージ**

```markdown
Access denied: You need the %s privilege on the table %s to execute this operation
```

### `DB-SQL-10022`

**メッセージ**

```markdown
Access denied: You can't grant the %s privilege because you don't have the same privilege on the table %s
```

### `DB-SQL-10023`

**メッセージ**

```markdown
Access denied: You can't grant the %s privilege because you don't have the same privilege on the namespace %s
```

### `DB-SQL-10024`

**メッセージ**

```markdown
Access denied: You can't revoke the %s privilege because you don't have the same privilege on the table %s
```

### `DB-SQL-10025`

**メッセージ**

```markdown
Access denied: You can't revoke the %s privilege because you don't have the same privilege on the namespace %s
```

### `DB-SQL-10026`

**メッセージ**

```markdown
Syntax error. Line %d:%d %s
```

### `DB-SQL-10027`

**メッセージ**

```markdown
Syntax error. Multiple PRIMARY KEYs specified (exactly one required)
```

### `DB-SQL-10028`

**メッセージ**

```markdown
Cannot grant the INSERT privilege if the user doesn't have the UPDATE privilege
```

### `DB-SQL-10029`

**メッセージ**

```markdown
Cannot grant the UPDATE privilege if the user doesn't have the INSERT privilege
```

### `DB-SQL-10030`

**メッセージ**

```markdown
Cannot grant the UPDATE privilege if the user doesn't have the SELECT privilege
```

### `DB-SQL-10031`

**メッセージ**

```markdown
Cannot grant the DELETE privilege if the user doesn't have the SELECT privilege
```

### `DB-SQL-10032`

**メッセージ**

```markdown
Cannot revoke the SELECT privilege if the user has the UPDATE privilege
```

### `DB-SQL-10033`

**メッセージ**

```markdown
Cannot revoke the SELECT privilege if the user has the DELETE privilege
```

### `DB-SQL-10034`

**メッセージ**

```markdown
Cannot revoke the INSERT privilege if the user has the UPDATE privilege
```

### `DB-SQL-10035`

**メッセージ**

```markdown
Cannot revoke the UPDATE privilege if the user has the INSERT privilege
```

### `DB-SQL-10036`

**メッセージ**

```markdown
A non-clustering-key column is specified in the CLUSTERING ORDER directive. Column: %s
```

### `DB-SQL-10037`

**メッセージ**

```markdown
The order of the columns in the CLUSTERING ORDER directive must match the order for the clustering key (%s must appear before %s)
```

### `DB-SQL-10038`

**メッセージ**

```markdown
The CLUSTERING ORDER is missing for the column %s
```

### `DB-SQL-10039`

**メッセージ**

```markdown
Empty SQL is specified
```

### `DB-SQL-10040`

**メッセージ**

```markdown
Multiple SQLs are not allowed
```

### `DB-SQL-10041`

**メッセージ**

```markdown
The column %s is ambiguous
```

### `DB-SQL-10042`

**メッセージ**

```markdown
The column %s cannot be specified in the %s clause. Only the columns in the table %s can be specified in the %s clause
```

### `DB-SQL-10043`

**メッセージ**

```markdown
An unbound bind marker is still in the escape character of the LIKE predicate for the column %s
```

### `DB-SQL-10044`

**メッセージ**

```markdown
The escape character must be a TEXT value for the LIKE predicate for the column %s
```

### `DB-SQL-10045`

**メッセージ**

```markdown
The value of the predicate must not be null unless the operator is 'IS NULL' or 'IS NOT NULL'. Predicate: %s
```

### `DB-SQL-10046`

**メッセージ**

```markdown
An unbound bind marker is still in the LIMIT clause
```

### `DB-SQL-10047`

**メッセージ**

```markdown
The LIMIT must be an INT value
```

### `DB-SQL-10048`

**メッセージ**

```markdown
Unmatched column names or values
```

### `DB-SQL-10049`

**メッセージ**

```markdown
The column %s is specified twice
```

### `DB-SQL-10050`

**メッセージ**

```markdown
All primary key columns must be specified in the INSERT or UPSERT statement
```

### `DB-SQL-10051`

**メッセージ**

```markdown
An unbound bind marker is still in the value of the column %s
```

### `DB-SQL-10052`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a boolean value (BOOLEAN) is specified
```

### `DB-SQL-10053`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a decimal number (INT or BIGINT) is specified
```

### `DB-SQL-10054`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a floating point number (FLOAT or DOUBLE) is specified
```

### `DB-SQL-10055`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a string (TEXT, DATE, TIME, TIMESTAMP, or TIMESTAMPTZ) is specified
```

### `DB-SQL-10056`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BOOLEAN value is specified
```

### `DB-SQL-10057`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but an INT value is specified
```

### `DB-SQL-10058`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BIGINT value is specified
```

### `DB-SQL-10059`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a FLOAT value is specified
```

### `DB-SQL-10060`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a DOUBLE value is specified
```

### `DB-SQL-10061`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TEXT value is specified
```

### `DB-SQL-10062`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a BLOB value is specified
```

### `DB-SQL-10063`

**メッセージ**

```markdown
RIGHT OUTER JOIN can only be specified as the first join
```

### `DB-SQL-10064`

**メッセージ**

```markdown
The JOIN predicate is not specified properly. Predicate: %s
```

### `DB-SQL-10065`

**メッセージ**

```markdown
The data types of the columns in the JOIN predicate do not match. Predicate: %s
```

### `DB-SQL-10066`

**メッセージ**

```markdown
The column %s is specified twice in the JOIN predicates. Predicates: %s
```

### `DB-SQL-10067`

**メッセージ**

```markdown
Either all primary key columns or an indexed column for the table %s must be specified in the JOIN predicates. Predicates: %s
```

### `DB-SQL-10068`

**メッセージ**

```markdown
Cannot issue mutation DML SQLs such as INSERT, UPDATE or DELETE with executeQuery()
```

### `DB-SQL-10069`

**メッセージ**

```markdown
Cannot issue SELECT SQLs with executeUpdate()
```

### `DB-SQL-10070`

**メッセージ**

```markdown
The TWO_PHASE_COMMIT_TRANSACTION mode is not supported in the current transaction manager
```

### `DB-SQL-10071`

**メッセージ**

```markdown
The encrypted column %s is not allowed in the %s clause
```

### `DB-SQL-10072`

**メッセージ**

```markdown
The user %s does not exist
```

### `DB-SQL-10073`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a DATE value is specified
```

### `DB-SQL-10074`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TIME value is specified
```

### `DB-SQL-10075`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TIMESTAMP value is specified
```

### `DB-SQL-10076`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a TIMESTAMPTZ value is specified
```

### `DB-SQL-10077`

**メッセージ**

```markdown
The policy %s does not exist
```

### `DB-SQL-10078`

**メッセージ**

```markdown
Beginning a transaction in read-only mode is not supported in two-phase commit transaction mode
```

### `DB-SQL-10079`

**メッセージ**

```markdown
Starting a transaction in read-only mode is not supported in two-phase commit transaction mode
```

### `DB-SQL-10080`

**メッセージ**

```markdown
Cannot change read-only mode while a transaction is in progress
```

### `DB-SQL-10081`

**メッセージ**

```markdown
Wrong number of arguments for the %s function. Min: %d; max: %d
```

### `DB-SQL-10082`

**メッセージ**

```markdown
The column %s must appear in the GROUP BY clause
```

### `DB-SQL-10083`

**メッセージ**

```markdown
Unknown function: %s
```

### `DB-SQL-10084`

**メッセージ**

```markdown
The ordering %s must appear in the projections
```

### `DB-SQL-10085`

**メッセージ**

```markdown
The %s function does not support the data type: %s
```

### `DB-SQL-10086`

**メッセージ**

```markdown
Numeric overflow in the %s function for the column: %s
```

### `DB-SQL-10087`

**メッセージ**

```markdown
The %s function does not support the argument type: %s
```

### `DB-SQL-10088`

**メッセージ**

```markdown
The %s in the HAVING clause must appear in the SELECT projections
```

### `DB-SQL-10089`

**メッセージ**

```markdown
Invalid LIKE pattern: '%s'. Detail: %s
```

### `DB-SQL-10090`

**メッセージ**

```markdown
Command statements (BEGIN, COMMIT, ROLLBACK, SHOW ..., etc.) are not allowed in batch execution
```

### `DB-SQL-10091`

**メッセージ**

```markdown
Only mutation statements (INSERT, UPDATE, DELETE, etc.) are allowed in batch execution
```

### `DB-SQL-10092`

**メッセージ**

```markdown
Unmatched column type. The type of the column %s should be %s, but a blob literal is specified
```

### `DB-SQL-10093`

**メッセージ**

```markdown
A bind marker is not allowed in the argument of the function %s
```

### `DB-SQL-10094`

**メッセージ**

```markdown
The column %s is specified more than once in the CREATE TABLE statement
```

### `DB-SQL-10095`

**メッセージ**

```markdown
Executing a batch with multiple statements is not supported in one-operation mode
```

### `DB-SQL-10096`

**メッセージ**

```markdown
Functions are not allowed in WHERE clauses: %s
```

### `DB-SQL-10097`

**メッセージ**

```markdown
Functions are not allowed in ORDER BY clauses without GROUP BY: %s
```

### `DB-SQL-10098`

**メッセージ**

```markdown
AUTH_METHOD is specified more than once
```

### `DB-SQL-10099`

**メッセージ**

```markdown
Invalid pos or length for Blob access. pos: %d, length: %d
```

### `DB-SQL-10100`

**メッセージ**

```markdown
The start position for Blob.position() must be >= 1. start: %d
```

### `DB-SQL-10101`

**メッセージ**

```markdown
The InputStream has fewer bytes than the declared length. declared: %d
```
